<?xml version="1.0"?>
<package format="2">
  <name>motion_estimation_test_opencv</name>
  <version>0.1.0</version>
  <description>
 OpenCL motion estimation test
  </description>

  <maintainer email="mpantic@student.ethz.ch">Michael Pantic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
</package>
